--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build":"webpack"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -20,8 +20,15 @@
   "homepage": "https://github.com/bhuvanagsai/Cart-Assignment#readme",
   "devDependencies": {
     "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^1.2.1",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "path": "^0.12.7",
+    "sass": "^1.27.1",
+    "sass-loader": "^10.0.4",
     "webpack": "^5.3.1",
     "webpack-cli": "^4.1.0"
   },
